--- a/enot_app/templates/enot_app/newmain.html
+++ b/enot_app/templates/enot_app/newmain.html
@@ -7,10 +7,8 @@
 {% block main %}
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-4"></div>  
-        <div class="col-lg-4"></div>  
-        <div class="col-lg-4"></div>  
+    <div class="row" id="directions">
+
     </div>
 </div>
 
@@ -18,5 +16,5 @@
 
 {% block scripts %}
     {{ block.super }}
-    <script src ="{% static 'js/newmain.js' %}" type="text/javascript"></script>
+    <script src ="{% static 'js/main.js' %}" type="text/javascript"></script>
 {% endblock %}
