--- a/enot_app/templates/enot_app/base.html
+++ b/enot_app/templates/enot_app/base.html
@@ -21,7 +21,7 @@
     {% block scripts %}
         <script src="{% static 'lib/jquery.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src ="{% static 'lib/vue.js' %}" type="text/javascript"></script>
+        <script src ="{% static 'lib/vue.min.js' %}" type="text/javascript"></script>
         <script src ="{% static 'js/common.js' %}" type="text/javascript"></script>
     {% endblock %}
 </body>
