--- a/enot_app/static/css/pricelist.css
+++ b/enot_app/static/css/pricelist.css
@@ -320,7 +320,7 @@
   color: white;
 }
 
-/* line 3, scss/main.scss */
+/* line 3, scss/pricelist.scss */
 #logo {
   width: 160px;
   display: block;
@@ -328,7 +328,7 @@
   font-weight: 500;
 }
 
-/* line 12, scss/main.scss */
+/* line 12, scss/pricelist.scss */
 #subscription {
   padding: 2em 15%;
   margin-bottom: 1em;
@@ -336,7 +336,7 @@
   border-radius: .7em;
   text-align: center;
 }
-/* line 18, scss/main.scss */
+/* line 18, scss/pricelist.scss */
 #subscription input {
   display: block;
   margin: auto;
@@ -344,7 +344,7 @@
   font-size: 120%;
   text-align: center;
 }
-/* line 25, scss/main.scss */
+/* line 25, scss/pricelist.scss */
 #subscription button {
   width: 66%;
   margin: auto;
@@ -353,7 +353,7 @@
   margin-top: 5px;
 }
 
-/* line 34, scss/main.scss */
+/* line 34, scss/pricelist.scss */
 #warning-msg {
   margin-top: 1em;
   background-color: #e3f7d8;
@@ -362,7 +362,7 @@
   padding: 1em;
 }
 
-/* line 42, scss/main.scss */
+/* line 42, scss/pricelist.scss */
 .logo-text {
   text-align: center;
   font-size: 150%;
@@ -372,7 +372,7 @@
   margin: auto;
 }
 
-/* line 50, scss/main.scss */
+/* line 50, scss/pricelist.scss */
 #bid-feed {
   background-color: #323232;
   padding: 1em;
@@ -380,7 +380,7 @@
   min-height: 10em;
 }
 
-/* line 57, scss/main.scss */
+/* line 57, scss/pricelist.scss */
 .bid__row {
   color: white;
   display: block;
@@ -392,20 +392,20 @@
   margin-bottom: 10px;
   width: 100%;
 }
-/* line 68, scss/main.scss */
+/* line 68, scss/pricelist.scss */
 .bid__row a {
   text-decoration: none;
 }
-/* line 70, scss/main.scss */
+/* line 70, scss/pricelist.scss */
 .bid__row a.normal-price {
   color: white;
 }
-/* line 73, scss/main.scss */
+/* line 73, scss/pricelist.scss */
 .bid__row a.special-price {
   color: magenta;
 }
 
-/* line 82, scss/main.scss */
+/* line 82, scss/pricelist.scss */
 .bid-part {
   display: inline-block;
   text-align: center;
@@ -413,67 +413,67 @@
   border-color: white;
   border-style: solid;
 }
-/* line 88, scss/main.scss */
+/* line 88, scss/pricelist.scss */
 .bid-part:last-of-type {
   border-width: 0;
 }
 
-/* line 93, scss/main.scss */
+/* line 93, scss/pricelist.scss */
 .bid__destination {
   font-weight: 600;
   width: 7%;
 }
 
-/* line 98, scss/main.scss */
+/* line 98, scss/pricelist.scss */
 .bid__dest-name {
   width: 20%;
 }
 
-/* line 102, scss/main.scss */
+/* line 102, scss/pricelist.scss */
 .bid__price {
   width: 15%;
   font-size: 110%;
 }
 
-/* line 108, scss/main.scss */
+/* line 108, scss/pricelist.scss */
 .bid__dates {
   min-width: 28%;
 }
 
-/* line 112, scss/main.scss */
+/* line 112, scss/pricelist.scss */
 .bid__stops {
   width: 10%;
 }
 
-/* line 116, scss/main.scss */
+/* line 116, scss/pricelist.scss */
 .bid__days {
   width: 10%;
 }
 
-/* line 121, scss/main.scss */
+/* line 121, scss/pricelist.scss */
 .s_bid-part {
   display: inline-block;
   text-align: center;
 }
-/* line 125, scss/main.scss */
+/* line 125, scss/pricelist.scss */
 .s_bid-part:last-of-type {
   border-width: 0;
 }
 
-/* line 130, scss/main.scss */
+/* line 130, scss/pricelist.scss */
 .s_bid__destination {
   font-weight: 600;
   width: 7%;
 }
 
-/* line 135, scss/main.scss */
+/* line 135, scss/pricelist.scss */
 .s_bid__dest-name {
   font-size: 130%;
   display: block;
   float: left;
 }
 
-/* line 141, scss/main.scss */
+/* line 141, scss/pricelist.scss */
 .s_bid__price {
   font-size: 130%;
   text-align: right;
@@ -481,12 +481,12 @@
   float: right;
 }
 
-/* line 160, scss/main.scss */
+/* line 160, scss/pricelist.scss */
 .second-line {
   font-size: 90%;
 }
 
-/* line 164, scss/main.scss */
+/* line 164, scss/pricelist.scss */
 .window {
   padding: 0 .5em;
   background-color: black;
@@ -494,7 +494,7 @@
   font-weight: 600;
 }
 
-/* line 172, scss/main.scss */
+/* line 172, scss/pricelist.scss */
 .rsign {
   font-size: 80%;
   font-weight: lighter;
@@ -502,88 +502,88 @@
 }
 
 /* always present */
-/* line 201, scss/main.scss */
+/* line 201, scss/pricelist.scss */
 .expand-transition {
   transition: all .3s ease;
 }
 
 /* .expand-enter defines the starting state for entering */
 /* .expand-leave defines the ending state for leaving */
-/* line 206, scss/main.scss */
+/* line 206, scss/pricelist.scss */
 .expand-enter, .expand-leave {
   opacity: 0;
 }
 
-/* line 213, scss/main.scss */
+/* line 213, scss/pricelist.scss */
 .flip {
   transition: transform 1s;
 }
 
-/* line 218, scss/main.scss */
+/* line 218, scss/pricelist.scss */
 .bounce-transition {
   display: inline-block;
   /* otherwise scale animation won't work */
 }
 
-/* line 221, scss/main.scss */
+/* line 221, scss/pricelist.scss */
 .bounce-enter {
   animation: bounce-in .5s;
 }
 
-/* line 224, scss/main.scss */
+/* line 224, scss/pricelist.scss */
 .bounce-leave {
   animation: bounce-out .5s;
 }
 
 @keyframes bounce-in {
-  /* line 228, scss/main.scss */
+  /* line 228, scss/pricelist.scss */
   0% {
     transform: scale(0);
   }
 
-  /* line 231, scss/main.scss */
+  /* line 231, scss/pricelist.scss */
   50% {
     transform: scale(1.5);
   }
 
-  /* line 234, scss/main.scss */
+  /* line 234, scss/pricelist.scss */
   100% {
     transform: scale(1);
   }
 }
 
 @keyframes bounce-out {
-  /* line 239, scss/main.scss */
+  /* line 239, scss/pricelist.scss */
   0% {
     transform: scale(1);
   }
 
-  /* line 242, scss/main.scss */
+  /* line 242, scss/pricelist.scss */
   50% {
     transform: scale(1.5);
   }
 
-  /* line 245, scss/main.scss */
+  /* line 245, scss/pricelist.scss */
   100% {
     transform: scale(0);
   }
 }
 
-/* line 251, scss/main.scss */
+/* line 251, scss/pricelist.scss */
 .staggered-transition {
   transition: all 2s ease;
   margin: 0;
   background-color: #323232;
 }
 
-/* line 258, scss/main.scss */
+/* line 258, scss/pricelist.scss */
 .staggered-enter, .staggered-leave {
   background-color: #55d426;
   opacity: 0;
   height: 0;
 }
 
-/* line 266, scss/main.scss */
+/* line 266, scss/pricelist.scss */
 h1 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
@@ -595,12 +595,12 @@ h1 {
   padding-bottom: .15em;
 }
 
-/* line 280, scss/main.scss */
+/* line 280, scss/pricelist.scss */
 h2 {
   font-size: 150%;
 }
 
-/* line 285, scss/main.scss */
+/* line 285, scss/pricelist.scss */
 .direction {
   background-color: white;
   padding: 1em;
@@ -609,31 +609,31 @@ h2 {
   margin-bottom: 1em;
 }
 
-/* line 293, scss/main.scss */
+/* line 293, scss/pricelist.scss */
 .country {
   padding: .5em;
   border: 1px solid #efefef;
   margin-bottom: 1em;
 }
 
-/* line 299, scss/main.scss */
+/* line 299, scss/pricelist.scss */
 .place {
   padding-left: .3em;
 }
 
-/* line 303, scss/main.scss */
+/* line 303, scss/pricelist.scss */
 .place__name {
   float: left;
   width: 50%;
 }
 
-/* line 308, scss/main.scss */
+/* line 308, scss/pricelist.scss */
 .place__price {
   float: left;
   width: 30%;
 }
 
-/* line 313, scss/main.scss */
+/* line 313, scss/pricelist.scss */
 .place__stops, .place__more {
   float: left;
   width: 10%;
