--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1>Улётные билеты</h1>
 <div>
-    <h2>БАНГКОК: 32000р</h2>
+  <!--   <h2>БАНГКОК: 32000р</h2>
     <h2>Emirates со стыковкой в Дубаи</h2>
     <div>26 дней: 23 апреля —19 мая</div>
 
@@ -38,7 +38,7 @@
 
             </td>
         </tr>
-    </table>
+    </table> -->
 <!--     <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
       <tbody>
         <tr>
@@ -57,13 +57,20 @@
 </div>
 {% for t in trips %}
 <div>
-    <h2>{{ t.destination_code }} - {{t.price}}</h2>
+    <h2>{{ t.destination.name }} - {{t.price}}</h2>
+    {% for b in t.get_benefits %}
+        <div style="color:green">+{{b.message }}</div>
+    {% endfor %}
+    {% for b in t.get_penalties %}
+        <div style="color:red">-{{b.message }}</div>
+    {% endfor %}
     {% for sl in t.get_slices %}
         {% for s in sl.segments %}
             {% for l in s.legs %}
                 <p>{{l.origin}} -> {{l.destination}}</p>
             {% endfor %}
         {% endfor %}
+        ...
     {% endfor %}
 
 
