--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -58,6 +58,7 @@
 {% for t in trips %}
 <div>
     <h2>{{ t.destination.name }} - {{t.price}}</h2>
+    R: {{t.rating}} C:{{t.rt_comfort}} - P:{{t.rt_price}}
     {% for b in t.get_benefits %}
         <div style="color:green">+{{b.message }}</div>
     {% endfor %}
