--- a/enot_app/templates/enot_app/base_letter.html
+++ b/enot_app/templates/enot_app/base_letter.html
@@ -277,7 +277,7 @@
           <div class="content">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <!-- <span class="preheader">Самые дешевые авиабилеты от FLYFROM.MOSCOW</span> -->
+            <span class="preheader">Свежая порция улётных билетов!</span>
             <table class="main">
 
               <!-- START MAIN CONTENT AREA -->
