--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -20,7 +20,7 @@
                     Москва — 5ч 30мин — Дубаи<br/>
                     Стыковка 3ч30мин<br/>
                     Дубай — 6ч 30мин — Бангкок<br/>
-                    Прилетаем в 10:20 
+                    Прилетаем в 10:20
                 </p>
             </td>
             <td width="50%">
@@ -58,10 +58,10 @@
 {% for t in trips %}
 <div>
     R: {{t.rating}} > E:{{t.rt_eff}} C:{{t.rt_comfort}} - P:{{t.rt_price}}
-    <h2>{{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}} — {{t.price}}</h2>
-    
-    
-    {{t.days_text}} {{ t.departure|date:"d E(D)" }} - {{ t.arrival|date:"d E(D)" }} 
+    <h2>{{forloop.counter}}: {{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}} — {{t.price}}</h2>
+
+
+    {{t.days_text}} {{ t.departure|date:"d E(D)" }} - {{ t.arrival|date:"d E(D)" }}
     <div>{% for c in t.get_carriers %}{{c}}{% endfor %}</div>
     {% for b in t.get_benefits %}
         <div style="color:green">+{{b.message }}</div>
@@ -77,9 +77,6 @@
         {% endfor %}
         ...
     {% endfor %}
-
-
-
 
 </div>
 {% endfor %}
