--- a/enot_app/templates/enot_app/pricelist.html
+++ b/enot_app/templates/enot_app/pricelist.html
@@ -4,6 +4,7 @@
 {% block head %}
 {{ block.super }}
 <link rel="stylesheet" href="{% static 'css/pricelist.css' %}">
+<link rel="stylesheet" href="{% static 'css/lib/select2.min.css' %}">
 <title>Обзор цен</title>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
@@ -13,13 +14,34 @@
 
 <div class="container">
     <div class="row">
-        <p>
-          <label for="amount">Maximum price:</label>
-          <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-        </p>
-         
-        <div id="slider-range-min"></div>
+        <div class="col-lg-4">
+            <p>
+              <label for="amount">Цена до:</label>
+              <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+            </p>
+            <div id="slider-range-min"></div>
+        </div>
+        <div class="col-lg-4">
+            <div id="el"></div>
+            <script type="text/x-template" id="demo-template">
+              <div>
+                <slider>
+                </slider>
+              </div>
+            </script>
+
+            <script type="text/x-template" id="select2-template">
+              <select>
+                <slot></slot>
+              </select>
+            </script>
+
+            <script type="text/x-template" id="slider-template">
+              <div></div>
+            </script>
+        </div>
     </div>
+
     <div class="row" id="directions">
 
     </div>
@@ -30,5 +52,6 @@
 {% block scripts %}
     {{ block.super }}
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src ="{% static 'lib/select2.js' %}" type="text/javascript"></script>
     <script src ="{% static 'js/pricelist.js' %}" type="text/javascript"></script>
 {% endblock %}
