--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -29,9 +29,9 @@
 {% for t in trips %}
 
 <div style="margin-bottom: 1em">
-    {% if debug %}
+<!--     {% if debug %}
         R: {{t.rating}} > E:{{t.rt_eff}} C:{{t.rt_comfort}} - P:{{t.rt_price}}
-    {% endif %}
+    {% endif %} -->
     <h2>
         <!-- {{forloop.counter}}:  -->{{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}}:
          {{t.price}}<span style="font-size:60%">&#8381;
