--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -76,7 +76,8 @@
         ...
     {% endfor %} -->
 
-    <a href="#">Найти на Aviasales >>></a>
+    <!-- <a href="#">Найти на Aviasales >>></a> -->
+    http://{{ request.get_host }}{% url 'enot_app:ticketno' t.id %}
 
 
 
