--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -32,7 +32,7 @@
 <!--     {% if debug %}
         R: {{t.rating}} > E:{{t.rt_eff}} C:{{t.rt_comfort}} - P:{{t.rt_price}}
     {% endif %} -->
-    <h2>{{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}}: {{t.price}}<span style="font-size:60%">&#8381;</span></h2>
+    <h2>📍{{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}}: {{t.price}}<span style="font-size:60%">&#8381;</span></h2>
         <div style="padding-left: .5em; border-width: 0 0 0 1px; border-color: gray; border-style: solid">
         <!-- {{ t.departure|date:"d E(D)" }} -->
         <div><strong>
@@ -40,10 +40,10 @@
         </strong>
         </div>
         {{t.get_hd.days_text}}
-        {% for n in t.chd_days|create_range %}
-        <div style="width:5px; height:10px; background-color: blue; display:inline-block; margin-left:-2px"></div>
+        {% for n in t.chd_days|create_range %}●
+        <!-- <div style="width:5px; height:10px; background-color: blue; display:inline-block; margin-left:-2px"></div> -->
         {% endfor %}
-        <div>
+        <div>✈
             {{t.get_hd.carriers}}
 <!--             {% for c in t.get_hd.carriers %}
                 {{c.name}}
@@ -77,16 +77,16 @@
     {% endfor %} -->
 
     <!-- <a href="#">Найти на Aviasales >>></a> -->
+    <div>
     http://{{ request.get_host }}{% url 'enot_app:ticketno' t.id %}
-
-
-
+    </div>
 </div>
+&nbsp;<br/>
 {% endfor %}
 {% endblock %}
 
 {% block footer %}
-(C) footer 2017
+<!-- (C) footer 2017 -->
 {% endblock %}
 
 
