--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Улётные билеты</h1>
+<!-- <h1>Улётные билеты</h1> -->
 <div>
 <!--     <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
       <tbody>
@@ -26,17 +26,26 @@
       </tbody>
     </table> -->
 </div>
+
+{% for t in trips %}
+    {{t.destination_name}}
+    {% if forloop.last %}
+    {% else %}
+    , 
+    {% endif %}
+{% endfor %}
+&nbsp;<br/>
 {% for t in trips %}
 &nbsp;<br/>
 <div style="margin-bottom: 1em">
 <!--     {% if debug %}
         R: {{t.rating}} > E:{{t.rt_eff}} C:{{t.rt_comfort}} - P:{{t.rt_price}}
     {% endif %} -->
-    <h2>🔵 {{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}}: {{t.price}}<span style="font-size:60%">&#8381;</span></h2>&nbsp;<br/>
+    <h2>🔵 {{ t.destination.name }}, {{t.destination.place.gcountry.rus_name}}: {{t.price}}<span style="font-size:60%">&#8381;</span></h2><!-- &nbsp;<br/> -->
         <div style="padding-left: .5em; border-width: 0 0 0 1px; border-color: gray; border-style: solid">
         <!-- {{ t.departure|date:"d E(D)" }} -->
         <div><strong>
-        🗓{{ t.departure|date:"d E" }} - {{ t.arrival|date:"d E" }}
+        🗓{{ t.departure|date:"d E" }} - {{ t.arrival|date:"d E" }} ({{t.departure|date:"D"}}-{{t.arrival|date:"D"}})
         </strong>
         </div>
         🗓 {{t.get_hd.days_text}}
