--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -28,7 +28,7 @@
 </div>
 
 {% for t in trips %}
-    {{t.destination_name}}
+    {{t.destination_name|title}}: {{t.price}}<!-- &#8381; -->
     {% if forloop.last %}
     {% else %}
     , 
