--- a/enot_app/templates/enot_app/main.html
+++ b/enot_app/templates/enot_app/main.html
@@ -13,7 +13,16 @@
 
 <div class="container">
     <div class="row">
-        <div id="el"></div>
+        <!-- <div id="el"></div> -->
+        <div class="col-lg-8 col-lg-offset-2 plate" >
+            <h1>Лучшие предложения по авиабилетам из&nbsp;Москвы</h1>
+            <p>Улётные билеты — это самые интересные предложения по авиаперелетам из Москвы туда и обратно, найденные с помощью изощренного искуственного интеллекта и кропотливого ручного труда. Каждый день мы просматриваем тысячи предложений и отбираем самые лучшие с учетом не только цены, но и множества других факторов, таких как рейтинг авиакомпании, модель самолета и времена стыковок.</p>
+            <p class="group-links">
+                <a href="https://www.facebook.com/uletbilet/">Страница в Facebook</a>
+                <a href="https://vk.com/club122893589">Группа в VK</a>
+            </p>
+            <h2>Присоединяйтесь, не пропустите свой Улётный&nbsp;Билет! :)</h2>
+        </div>
 
     </div>
 
@@ -24,6 +33,6 @@
 {% block scripts %}
     {{ block.super }}
     <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
-    <script src ="{% static 'js/components.js' %}" type="text/javascript"></script>
-    <script src ="{% static 'js/main.js' %}" type="text/javascript"></script>
+    <!--<script src ="{% static 'js/components.js' %}" type="text/javascript"></script>-->
+    <!--<script src ="{% static 'js/main.js' %}" type="text/javascript"></script>-->
 {% endblock %}
