--- a/enot_app/static/css/main.css
+++ b/enot_app/static/css/main.css
@@ -5,13 +5,20 @@
     padding:2em
 }
 
+p {
+    font-size: 120%;
+    display: block;
+    width: 80%;
+    margin: auto;
+}
+
 .group-links{
     margin-bottom: 3em;
     margin-top: 3em;
 }
 
 .group-links a{
-    font-size: 180%;
+    font-size: 150%;
     font-weight: bolder;
     display: block;
 }
