--- a/enot_app/templates/enot_app/main.html
+++ b/enot_app/templates/enot_app/main.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <!-- <div id="el"></div> -->
-        <div class="col-lg-8 col-lg-offset-2 plate" >
+        <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 plate" >
             <h1>Лучшие предложения по авиабилетам из&nbsp;Москвы</h1>
             <p>Улётные билеты — это самые интересные предложения по авиаперелетам из Москвы туда и обратно, найденные с помощью изощренного искуственного интеллекта и кропотливого ручного труда. Каждый день мы просматриваем тысячи предложений и отбираем самые лучшие с учетом не только цены, но и множества других факторов, таких как рейтинг авиакомпании, модель самолета и времена стыковок.</p>
             <p class="group-links">
