--- a/enot_app/templates/enot_app/base_letter.html
+++ b/enot_app/templates/enot_app/base_letter.html
@@ -279,7 +279,7 @@
           <div class="content">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <span class="preheader">Свежая порция улётных билетов!</span>
+            <span class="preheader"><!--Свежая порция улётных билетов!--></span>
             <table class="main">
 
               <!-- START MAIN CONTENT AREA -->
