--- a/enot_app/templates/enot_app/test_letter.html
+++ b/enot_app/templates/enot_app/test_letter.html
@@ -87,7 +87,8 @@
 
     <!-- <a href="#">Найти на Aviasales >>></a> -->
     <div>
-    🔎 http://{{ request.get_host }}{% url 'enot_app:ticketno' t.id %}
+    <!-- request.get_host -->
+    🔎 http://uletbilet.ru{% url 'enot_app:ticketno' t.id %}
     </div>
 </div>
 &nbsp;<br/>
